Updated HW40 and Lesson49-50 - fixed description in 40.1 and created text document with students and FP.

--- a/Урок 37-40. Кортежи. Множества. Словари/Python - HW40.html
+++ b/Урок 37-40. Кортежи. Множества. Словари/Python - HW40.html
@@ -195,11 +195,7 @@
         </div>
         </p>
 
-        <p>Все пользователи хранятся в <span class="hl-text">словаре</span> вида:
-        <div class="console">
-          <pre><code class="python">["ИДЕНТИФИКАТОР": {пользователь}, "ИДЕНТИФИКАТОР": {пользователь}, ...]</code></pre>
-        </div>
-        </p>
+        <p>Все пользователи хранятся в <span class="hl-text">списке</span>.</p>
 
         <p>При выборе <span class="hl-text">пункта 1</span> (Показать всех пользователей) программа <span class="hl-text">выводит в консоль данные всех пользователей в следующем формате</span>:
         <div class="console">
@@ -285,7 +281,7 @@
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 40.2 (Необязательное)</h2>
-        <p>На основе выполненного <span class="hl-text">Домашнего Задания 40.1</span> реализуйте <span class="hl-text">в главном меню</span> <span class="string">"Поиск по имени"</span>, который <span class="hl-text">запрашивает с консоли имя</span>, а затем <span class="hl-text">ищет всех пользователей с указанным именем</span> (поиск ТОЛЬКО по имени) и <span class="hl-text">выводит в консоль</span> в том же виде, как делает <span class="hl-text">пункт 1</span>.</p>
+        <p>На основе выполненного <span class="hl-text">Домашнего Задания 40.1</span> реализуйте <span class="hl-text">в главном меню</span> <span class="string"><b>"Поиск по имени"</b></span>, который <span class="hl-text">запрашивает с консоли имя</span>, а затем <span class="hl-text">ищет всех пользователей с указанным именем</span> (поиск ТОЛЬКО по имени) и <span class="hl-text">выводит в консоль</span> в том же виде, как делает <span class="hl-text">пункт 1</span>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 40.3 (Необязательное)</h2>
