Updated HW42, HW44, HW46 - fixed description in 42.6, fixed description in 44.4, changed description and added code in 46.1.

--- a/Урок 42-48. ООП/Python - HW44.html
+++ b/Урок 42-48. ООП/Python - HW44.html
@@ -294,7 +294,7 @@
         </div>
         </p>
 
-        <p>При выборе пункта 1 программа выводит в консоль данные в следующем виде:
+        <p>При выборе <span class="hl-text">пункта 1</span> программа <span class="hl-text">выводит в консоль данные</span> в следующем виде:
         <div class="console">
           <pre><code>"Идентификатор" - "Имя", <возраст>, "Должность", <зарплата>
 "Идентификатор" - "Имя", <возраст>, "Должность", <зарплата>
@@ -321,10 +321,13 @@
 5. Удалить заявку
 6. Засчитать заявку как выполненную
 7. Отменить выполненную заявку
-8. Вернуться
+8. Вернуться</code></pre>
+        </div>
+        </p>
 
-При выборе пунктов 1-2 программа выводит в консоль заявки в следующем виде:
-"идентификатор_заявки"
+        <p>При выборе <span class="hl-text">пунктов 1</span>-<span class="hl-text">2</span> программа <span class="hl-text">выводит в консоль заявки</span> в следующем виде:
+        <div class="console">
+          <pre><code>"идентификатор_заявки"
 "Описание"
 ========================================================================
 "идентификатор_заявки"
