Updated HW36 - fixed remark.

--- a/Урок 35-36. Сортировка. Поиск/Python - HW36.html
+++ b/Урок 35-36. Сортировка. Поиск/Python - HW36.html
@@ -186,7 +186,7 @@
     <div class="right-block">
       <div class="right-rect">
         <h2><strong>Примечание</strong></h2>
-        <p>Оформляйте ввод и вывод данных. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Можно использовать <code><b>append()</b></code>, <code><b>split()</b></code>, <code class="python"><b>len()</b></code>, <code class="python"><b>sort()</b></code>. Не используйте срезы.
+        <p>Оформляйте ввод и вывод данных. Используйте только то, что было пройденно до этого урока включительно. Не используйте в условии оператор <code class="python"><b>in</b></code>. Не используйте готовые методы, только если в заданиях не говорится об использовании тех или иных методов. Можно использовать <code><b>append()</b></code>, <code><b>split()</b></code>, <code class="python"><b>len()</b></code>, <code class="python"><b>sorted()</b></code>. Не используйте срезы.
         <p>
 
         <p>Сайт с визуализацией сортировок: <a href="https://airtucha.github.io/SortVis/">https://airtucha.github.io/SortVis/</a></p>
@@ -323,7 +323,7 @@
           return `<span class="self">${match}</span>`;
         });
         // BUILT-IN
-        regex = /\b(open|print|input|int|float|str|list|set|dict|range|len|sum|min|max|sort)\b/g;
+        regex = /\b(open|print|input|int|float|str|list|set|dict|range|len|sum|min|max|sorted)\b/g;
         innerHTML = innerHTML.replace(regex, (match) => {
           return `<span class="built-in">${match}</span>`;
         });
