Updated HW30 - added function code in 30.5.

--- a/Урок 28-34. Функции. Модули/Python - HW30.html
+++ b/Урок 28-34. Функции. Модули/Python - HW30.html
@@ -338,6 +338,16 @@ def top_up_balance(account: list, balance: int) -> bool:
     pass
 
 
+def withdraw_balance(account: list, balance: int) -> bool:
+    """
+    Функция снимает деньги с баланса аккаунта. Для проверки баланса использует check_balance.
+    :param account: Аккаунт в виде списка.
+    :param balance: Баланс снятия в виде целого числа.
+    :return: Если удалось снять - True. В противном случае - False.
+    """
+    pass
+
+
 def can_subscribe(account: list, subscribe_price: int) -> bool:
     """
     Функция проверяет, достаточно ли на балансе денег для оформления подписки.
